--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
 
 .navbar a {
     color: var(--link-color);
+    text-decoration: none;
+    color: #404040;
+    font-weight: bold;
+    gap: 300px;
 }
 
 .pages {
@@ -51,6 +55,8 @@ body {
 .title > .title {
     font-size: 64px;
     font-family: 'Roboto';
+    font-family: Impact, Charcoal, sans-serif;
+    margin-left: 20px;
 }
 
 .title > img {
@@ -60,8 +66,10 @@ body {
 .description {
     width: 80%;
     display: inline;
-    font-size: 14px;
+    font-size: 20px;
     font-family: 'Roboto';
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .actions {
@@ -195,3 +203,17 @@ body {
     height: 28px;
     font-size: 20px;
 }
+
+
+.round-button {
+    border-radius: 10px; /* Adjust the value to control the roundness of corners */
+    width: 120px; /* Set the width */
+    height: 40px; /* Set the height */
+    background-color: #3498db; /* Button background color */
+    color: white; /* Button text color */
+    border: none; /* Remove button border */
+    font-size: 16px; /* Font size */
+    font-weight: bold;
+    cursor: pointer;
+    color: black; 
+  }
