--- a/pages/css/login.css
+++ b/pages/css/login.css
@@ -1,219 +1,113 @@
-body {
-    --btn-primary: #7D7DF7;
-    --border: #C0BFBF;
-    --link-color: #505F98;
-    --btn-primary-dark: #111b47;
-    --btn-secondary: transparent;
-}
-
-.navbar {
+.login_form{
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid var(--border);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    width: inherit;
 }
 
-.navbar a {
-    color: var(--link-color);
-    text-decoration: none;
-    color: #404040;
+.login-box {
+    /* -webkit-box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75);
+    box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75); */
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
+    width: 20em;
+    height: 27em;
+    margin: 5em auto;
+    border-radius: 0.7em;
+}
+
+.login-header {
+    display: flex;
+    justify-content: center;
+    padding-top: 0.7em;
+    padding-bottom: 0.5em;
+    font-size: 2em;
     font-weight: bold;
-    gap: 300px;
 }
 
-.pages {
+.login-form-div {
     display: flex;
-    justify-content: flex-start;
-    width: 60%;
-    align-items: center;
-    gap: 24px;
+    justify-content: center;
 }
 
-.general {
-    width: 40%;
+.submit-button:hover {
+    opacity: 80%;
+}
+
+.submit-button {
+    background-color: #82C3FF;
+    transition: opacity 0.3s;
+}
+
+input {
+    position: inherit;
+    padding: 0.5em;
+    margin: 1em;
+    /* width: 18em; */
+    width:100%;
+    /* height: 2em; */
+    border-radius: 0.4em;
+}
+
+
+.icons {
+    width: 2em;
+    height: 2em;
+    margin: 1em
+}
+
+.alternate-login {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 24px;
+    justify-content: center;
 }
 
-.head {
-    margin: 128px 0 0 48px;
-    width: calc(100% - 648px);
+h2 { 
+    width: 90%; 
+    text-align: center; 
+    border-bottom: 1px solid #000; 
+    line-height: 0.001em; 
+    margin: 2em 0 1em; 
+    font-size: 0.8em;
+
+} 
+h2 span { 
+    background:#fff; 
+    padding:0 10px; 
+}
+
+.horizontal-line {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 12px;
+    justify-content: center;
 }
 
-.title {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.alternative-button:hover {
+    opacity: 80%;
 }
 
-.title > .title {
-    font-size: 64px;
-    font-family: 'Roboto';
-    font-family: Impact, Charcoal, sans-serif;
-    margin-left: 20px;
-}
-
-.title > img {
-    margin: -12px 0;
-}
-
-.description {
-    width: 80%;
-    display: inline;
-    font-size: 20px;
-    font-family: 'Roboto';
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.actions {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 10;
-}
-
-.actions > a {
-    padding: 8px 0;
-    width: 45%;
-    font-size: 16px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    text-decoration: none;
-    text-align: center;
-}
-
-.signup {
-    background-color: var(--btn-primary-dark);
-    color: white;
-    border: none;
-}
-
-.signin {
-    background-color: var(--btn-secondary);
-    color: black;
-    border: 2px solid black;
-}
-
-.splash {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    height: calc(100vh - 128px);
-}
-
-.phone {
-    z-index: 10;
-    position: fixed;
-    bottom: 48px;
-    right: 124px;
-    height: calc(90vh - 128px);
-}
-
-.btn {
-    text-decoration: none;
-    background-color: var(--btn-primary);
-    padding: 4px 12px;
-    color: white !important;
-}
-
-.copy {
-    position: fixed;
-    bottom: 12px;
-    left: 12px;
-    color: grey;
-}
-
-.login_form {
-    margin: 64px auto;
-    width: 50vh;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    align-items: center;
-}
-
-.login_form > input {
-    width: 100%;
-    height: 64px;
-    text-align: center;
-    font-size: 24px;
+.alternative-button {
+    transition: opacity 0.3s;
+    background:none;
+    border:none;
+    margin:0;
+    padding:0;
     cursor: pointer;
+    width: fit-content;
 }
 
-.notes_main {
+.forgot-password {
+    /* color: #0000EE; */
+    margin-top: 0.3em;
+    font-size: 0.8em;
     display: flex;
-    height: calc(100vh - 67px);
+    justify-content: center;
 }
 
-.sidebar {
-    height: calc(100% - 48px);
-    width: 20%;
-    border-right: 1px solid var(--border);
-    padding: 24px;
-}
-
-.sidebar > .top {
-    font-size: 16px;
+.no-account {
+    margin-top: 0.7em;
+    font-size: 0.8em;
     display: flex;
-    justify-content: space-between;
-    font-weight: bold;
-    font-family: 'Roboto';
-    border-bottom: 1px solid var(--border);
-    padding-bottom: 16px;
+    justify-content: center;
 }
-
-.notes {
-    width: 80%;
-    height: 100%;
-    background-image: linear-gradient(0deg, var(--border) 5%, #ffffff 5%, #ffffff 100%);
-    background-size: 28.28px 28.28px;
-}
-
-.writing {
-    resize: none;
-    background: transparent;
-    width: 90%;
-    margin: 0 0 0 10%;
-    height: calc(100% - 2px);
-    border: none;
-    border-left: 1px solid red;
-    outline: none;
-    line-height: 28.28px;
-    font-size: 20px;
-}
-
-.files {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 12px;
-    align-items: center;
-    padding: 12px 0;
-}
-
-.files > button {
-    width: 80%;
-    height: 28px;
-    font-size: 20px;
-}
-
-
-.round-button {
-    border-radius: 10px; /* Adjust the value to control the roundness of corners */
-    width: 120px; /* Set the width */
-    height: 40px; /* Set the height */
-    background-color: #3498db; /* Button background color */
-    color: white; /* Button text color */
-    border: none; /* Remove button border */
-    font-size: 16px; /* Font size */
-    font-weight: bold;
-    cursor: pointer;
-    color: black; 
-  }
