--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -86,8 +86,9 @@ body {
     text-align: left;
     margin-bottom: 20px; */
     
-    margin-top: 100px;
-    font-size: 25px;
+    /*margin-top: 100px;
+    font-size: 20px; */
+    font-size: 30px;
     font-family: 'normal';
     font-weight: lighter;
     color: rgb(0,0,102);
@@ -95,8 +96,14 @@ body {
     justify-content: center;
     align-items: center;
     text-align: left;
-    width: 80%; /* Set your desired width */
+    width: 60%; /* Set your desired width */
+
+    margin-left: 500px; /* Moves text 20px to the right */
+    margin-top: 700px;
+    position: absolute;
+    top: 5px; /* Moves text 5px down from its normal position */
 }
+
 
 .actions {
     width: 80%;
@@ -151,7 +158,7 @@ body {
     z-index: 100;
     position: absolute;
     bottom: -350px;
-    right: 450px;
+    right: 700px;
     height: calc(90vh - 128px);
 }
 
