--- a/pages/css/register.css
+++ b/pages/css/register.css
@@ -1,8 +1,66 @@
-.register{
-    width: 100%;
-    height: 100%;
+.register_form{
+    position: relative;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+
+    width: inherit;
+}
+
+.register-box {
+    /* -webkit-box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75);
+    box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75); */
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
+    width: 20em;
+    height: 27em;
+    margin: 5em auto;
+    border-radius: 0.7em;
+}
+
+.register-header {
+    display: flex;
+    justify-content: center;
+    padding-top: 0.7em;
+    padding-bottom: 0.5em;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.register-form-div {
+    display: flex;
+    justify-content: center;
+}
+
+.register-btn:hover {
+    opacity: 80%;
+}
+
+.register-btn {
+    background-color: #82C3FF;
+    transition: opacity 0.3s;
+    cursor: pointer;
+}
+
+input, button {
+    position: inherit;
+    padding: 0.5em;
+    margin: 1em;
+    /* width: 18em; */
+    width:100%;
+    /* height: 2em; */
+    border-radius: 0.4em;
+}
+
+a {
+    transition: opacity 0.3s;
+    background:none;
+    border:none;
+    margin:0;
+    padding:0;
+    cursor: pointer;
+    width: fit-content;
+    margin-top: 0.3em;
+    font-size: 0.8em;
 }
