--- a/pages/css/notes.css
+++ b/pages/css/notes.css
@@ -170,6 +170,7 @@ body {
 }
 
 .notes {
+    position: relative;
     width: 80%;
     height: 100%;
     background-image: linear-gradient(0deg, var(--border) 5%, #ffffff 5%, #ffffff 100%);
@@ -180,8 +181,8 @@ body {
     resize: none;
     background: transparent;
     width: 90%;
-    margin: 0 0 0 10%;
     height: calc(100% - 2px);
+    margin: 0 0 0 10%;
     border: none;
     border-left: 1px solid red;
     outline: none;
@@ -216,4 +217,12 @@ body {
     font-weight: bold;
     cursor: pointer;
     color: black; 
-  }
+}
+
+.draw{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
