--- a/pages/css/notes.css
+++ b/pages/css/notes.css
@@ -175,10 +175,11 @@ body {
     height: 100%;
     background-image: linear-gradient(0deg, var(--border) 5%, #ffffff 5%, #ffffff 100%);
     background-size: 28.28px 28.28px;
+    overflow-x: hidden;
 }
 
 .writing {
-    resize: none;
+    /* resize: none; */
     background: transparent;
     width: 90%;
     height: calc(100% - 2px);
@@ -222,7 +223,12 @@ body {
 .draw{
     position: absolute;
     top: 0;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
+    aspect-ratio: 1/1;
+    /* width: 500px;
+    height: 500px; */
     pointer-events: none;
+    z-index: 10;
+    /* background-color: wheat; */
 }
