--- a/pages/css/register.css
+++ b/pages/css/register.css
@@ -64,3 +64,14 @@ a {
     margin-top: 0.3em;
     font-size: 0.8em;
 }
+
+.invalid {
+    font-size: 0.8em;
+    color: red;
+    padding: 0;
+    margin: 0;
+    /* margin-top: 0.7em;
+    margin-bottom: 0.7em; */
+    display: flex;
+    justify-content: center;
+}
