--- a/pages/css/notes.css
+++ b/pages/css/notes.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid var(--border);
+    background-color: black;
 }
 
 .navbar a {
@@ -231,4 +232,37 @@ body {
     pointer-events: none;
     z-index: 10;
     /* background-color: wheat; */
+}
+
+.nav-asset{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.toolbar-icons:hover {
+    opacity: 80%;
+}
+
+.toolbar-icons {
+    background:none;
+    border:none;
+    /* border-style:dotted;
+    border-color: white; */
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 3rem;
+    height: 3rem;
+    transition: opacity 0.3s;
+}
+
+.toolbar-icons img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    
 }
