Replace px to em for checkmarks

--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -156,8 +156,8 @@ body {
     max-width: 10%;
     max-height: 10%;
 
-    top: 1035px;
-    left: 45px;
+    top: 64.75em;
+    left: 2.75em;
 }
   
 .teamsChecklist .two{ 
@@ -178,8 +178,8 @@ body {
     max-width: 10%;
     max-height: 10%;
 
-    top: 1135px;
-    left: 45px;
+    top: 71em;
+    left: 2.75em;
 }
 
 .teamsChecklist .three{ 
@@ -201,8 +201,8 @@ body {
     max-width: 10%;
     max-height: 10%;
 
-    top: 1035px;
-    left: 425px;
+    top: 64.75em;
+    left: 26.5em;
 }
 
 .teamsChecklist .four{ 
@@ -223,8 +223,8 @@ body {
     max-width: 10%;
     max-height: 10%;
     
-    top: 1135px;
-    left: 425px;
+    top: 71em;
+    left: 26.5em;
 }
 
 
@@ -247,8 +247,8 @@ body {
     max-width: 10%;
     max-height: 10%;
     
-    top: 1035px;
-    left: 845px;
+    top: 64.75em;
+    left: 52.5em;
 }
 
 .teamsChecklist .six{ 
@@ -271,8 +271,8 @@ body {
     max-width: 10%;
     max-height: 10%;
     
-    top: 1135px;
-    left: 845px;
+    top: 71em;
+    left: 52.5em;
 }
 
 
