--- a/pages/css/notes.css
+++ b/pages/css/notes.css
@@ -266,3 +266,12 @@ body {
     height: 100%;
     
 }
+
+.recording{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+.recording {
+    width: 100%;
+}
