--- a/pages/css/help.css
+++ b/pages/css/help.css
@@ -54,9 +54,36 @@
 }
 
 .dldescription{
+    padding-top: 3%;
     display: flex;
     font-size: 24px;
     font-family: 'Roboto', sans-serif;
     justify-content: center;
     align-items: center;
+}
+
+
+.button-container {
+  justify-content: center;
+  display: flex; /* Use flexbox to arrange buttons horizontally */
+  flex-direction: row; /* Arrange buttons in a row */
+
+}
+
+.instagram-btn {
+  margin-right: 10px; /* Add some margin between buttons */
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  height: 100px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.instagram-btn:last-child {
+  margin-right: 0; /* Remove margin for the last button */
 }
