--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -85,7 +85,7 @@ body {
     font-size: 30px;
     font-family: 'normal';
     font-weight: lighter;
-    color: rgb(0,0,102);
+    color: #7D7DF7;
     display: flex;
     justify-content: center;
     align-items: center;
