--- a/pages/css/notes.css
+++ b/pages/css/notes.css
@@ -159,6 +159,8 @@ body {
     width: 20%;
     border-right: 1px solid var(--border);
     padding: 24px;
+
+    position: relative;
 }
 
 .sidebar > .top {
@@ -177,7 +179,7 @@ body {
     height: 100%;
     background-image: linear-gradient(0deg, var(--border) 5%, #ffffff 5%, #ffffff 100%);
     background-size: 28.28px 28.28px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .writing {
@@ -272,7 +274,5 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-.recording {
-    width: 100%;
+    /* padding:1rem; */
 }
