--- a/pages/css/register.css
+++ b/pages/css/register.css
@@ -17,8 +17,8 @@
     -moz-box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75);
     box-shadow: -1px 1px 5px 9px rgba(0,0,0,0.75); */
     box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.2);
-    width: 20em;
-    height: 27em;
+    width: 27em;
+    height: 31em;
     margin: 5em auto;
     border-radius: 0.7em;
 }
@@ -28,7 +28,7 @@
     justify-content: center;
     padding-top: 0.7em;
     padding-bottom: 0.5em;
-    font-size: 2em;
+    font-size: 3em;
     font-weight: bold;
 }
 
@@ -57,7 +57,7 @@ input, button {
     border-radius: 0.4em;
 }
 
-a {
+.already-a-user {
     transition: opacity 0.3s;
     background:none;
     border:none;
