--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -483,8 +483,9 @@ body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background-color: #3498db; /* Background color for the buttons */
-    border: 2px solid #3498db; /* Border color for the buttons, matching the background color */
+    background-color: white; /* Background color for the buttons */
+    border-radius: 10px;
+    border: 2px solid black; /* Border color for the buttons, matching the background color */
   }
   
   .instagram-btn:last-child {
